# span

./: README.md  meson.build  pyproject.toml
.github/workflows/: pythonpackage.yml
src/: meson.build
src/pa2/: README.md  __init__.py  meson.build
