[build-system]
build-backend = "mesonpy"
requires = ["meson-python", "cython"]

[project]
name = "span"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.13"
license = {file = "LICENSE"}

[dependency-groups]
dev = [
    "cython>=3.1.2",
    "pyright>=1.1.402",
    "pytest>=8.4.0",
]

[tool.pytest.ini_options]
addopts = ["--doctest-modules"]
